--- a/src/index.css
+++ b/src/index.css
@@ -121,10 +121,10 @@
   }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
 body {
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 .font-josefin-sans {
-  font-family: 'Josefin Sans', sans-serif;
-} 
+  font-family: "Josefin Sans", sans-serif;
+}
